feat: add login notice to system settings
